# mash

./: README.md  setup.cfg  stdeb.cfg
.github/workflows/: ci.yaml
mash/: BitbakeRecipe.py  PackageMetadata.py  SPDXLicense.py  __init__.py  __main__.py  command.py  rosdep_support.py
mash/verb/: bitbake.py
test/: test_flake8.py  test_spell_check.py
