[metadata]
name = mash
version = attr: mash.__version__
url = https://github.com/robwoolley/mash/
project_urls =
  Changelog = https://github.com/robwoolley/mash/milestones?direction=desc&sort=due_date&state=closed
  GitHub = https://github.com/robwoolley/mash/
author = Rob Woolley
author_email = rob.woolley@windriver.com
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Plugins
  Intended Audience :: Developers
  Operating System :: MacOS
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache-2.0
description = Extension for colcon to serve as a template for new extensions.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.17.1
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0,<6
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
junit_suite_name = mash
markers =
  flake8
  linter

[options.entry_points]
console_scripts =
    mash = mash.command:main
mash.environment_variable =
    extension_blocklist = colcon_core.extension_point:EXTENSION_BLOCKLIST_ENVIRONMENT_VARIABLE
    home = mash.command:HOME_ENVIRONMENT_VARIABLE
    log_level = mash.command:LOG_LEVEL_ENVIRONMENT_VARIABLE

[flake8]
import-order-style = google

[coverage:run]
source = mash
